--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -36,7 +36,7 @@
         %br
         <strong>Together we’re building the Vignetto community, and it starts with you. </strong>
 
-    = link_to "Start now", "https://travelstarter.com/projects/vignetto/556", class: "btn btn-subcontent"
+    = link_to "Start now", "https://vignetto.com/events/34", class: "btn btn-subcontent"
 .row.mainpage-subcontent-row
   .col-lg-8
     .mainpage-subcontent
