--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -20,7 +20,7 @@
     .bar
 .row.mainpage-subcontent-row
   .col-lg-4
-    = image_tag "frontdescriptionimages.jpg", height: '215', width: '375'
+    = image_tag "pod_one_img.jpg", height: '215', width: '375'
   .col-lg-8
     .mainpage-subcontent
       %div
@@ -32,11 +32,11 @@
       %br
       %br
       %p.pull-left
-        <strong>Vignetto is Partnering with TravelStarter! </strong>We are excited to announce that Vignetto is launching a crowdfunding campaign with TravelStarter. Vignetto’s new online marketplace provides easy access to intimate and authentic local wine country experiences not available anywhere else, and now we need your help with our crowdfunding campaign. We have six funding levels from $5 to $200 that includes Signature Vignetto wine glasses, Vignetto wine gear (t-shirt, wine glasses and corkscrews), catered lunch in the vineyard, winemaker dinners, or an all-day Vignetto Adventure that will include three private tastings, transportation and catered lunch. 
+        <strong>Welcome to Vignetto</strong>Vignetto is a single source of finding unique, fun wine country experiences. Whether you want to do yoga in a vineyard, private tasting or enjoy a winemaker dinner in the vineyard or experience harvest like a local, Vignetto allows you to browse all wine country options to truly Live Wine Country Like a Local.  
         %br
         <strong>Together we’re building the Vignetto community, and it starts with you. </strong>
 
-    = link_to "Start now", "https://vignetto.com/events/34", class: "btn btn-subcontent"
+    = link_to "Start now", "https://vignetto.com/explore", class: "btn btn-subcontent"
 .row.mainpage-subcontent-row
   .col-lg-8
     .mainpage-subcontent
