--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -24,7 +24,7 @@
   .col-lg-8
     .mainpage-subcontent
       %div
-        %h2.title.pull-left Join our Crowdfunding Campaign 
+        %h2.title.pull-left Welcome to Vignetto
         .social-icons.pull-right
           = link_to image_tag('facebook.png'), "https://www.facebook.com/vignetto", target: :blank
           = link_to image_tag('instagram.png'), "https://instagram.com/livevignetto/", target: :blank 
@@ -32,7 +32,7 @@
       %br
       %br
       %p.pull-left
-        <strong>Welcome to Vignetto</strong>Vignetto is a single source of finding unique, fun wine country experiences. Whether you want to do yoga in a vineyard, private tasting or enjoy a winemaker dinner in the vineyard or experience harvest like a local, Vignetto allows you to browse all wine country options to truly Live Wine Country Like a Local.  
+        Vignetto is a single site where wine enthusiast can find unique, fun wine country experiences to share with your friends. Whether you want to do yoga in a vineyard, private tasting or enjoy a winemaker dinner in the vineyard or experience harvest like a local, Vignetto allows you to browse all wine country options to truly Live Wine Country Like a Local.  
         %br
         <strong>Together we’re building the Vignetto community, and it starts with you. </strong>
 
