--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -34,7 +34,7 @@
       %p.pull-left
         Vignetto is a single site where wine enthusiast can find unique, fun wine country experiences to share with your friends. Whether you want to do yoga in a vineyard, private tasting or enjoy a winemaker dinner in the vineyard or experience harvest like a local, Vignetto allows you to browse all wine country options to truly Live Wine Country Like a Local.  
         %br
-        <strong>Together we’re building the Vignetto community, and it starts with you. </strong>
+        <strong>Be part of a wine country experience today. </strong>
 
     = link_to "Start now", "https://vignetto.com/explore", class: "btn btn-subcontent"
 .row.mainpage-subcontent-row
